envoy.json
{
  "listeners": [
    {
      "address": {
        "socket_address": {
          "address": "0.0.0.0",
          "port_value": 80
        }
      },
      "filter_chains": [
        {
          "filters": [
            {
              "name": "envoy.http_connection_manager",
              "config": {
                "codec_type": "auto",
                "stat_prefix": "ingress_http",
                "route_config": {
                  "name": "local_route",
                  "virtual_hosts": [
                    {
                      "name": "backend",
                      "domains": [
                        "*"
                      ],
                      "routes": [
                        {
                          "match": {
                            "prefix": "/service/1"
                          },
                          "route": {
                            "cluster": "service1"
                          }
                        }
                      ]
                    }
                  ]
                },
                "http_filters": [
                  {
                    "name": "envoy.router",
                    "config": {
                    }
                  }
                ]
              }
            }
          ]
        }
      ]
    }
  ],
  "clusters": [
    {
      "name": "service1",
      "connect_timeout": "0.25s",
      "type": "strict_dns",
      "lb_policy": "round_robin",
      "hosts": [
        {
          "socket_address": {
            "address": "www.baidu.com",
            "port_value": 80
          }
        }
      ]
    }
  ],
  "admin": null,
  "access_log_path": "/dev/null",
  "address": {
    "socket_address": {
      "address": "0.0.0.0",
      "port_value": 8080
    }
  }
}
